feat: implement business catalog system with orders and permissions
- Add role-based permissions using spatie/laravel-permission
- Create order management system with payment proof handling
- Implement business catalog functionality with public URLs
- Add registration leads for new business signups
- Configure filesystem for cPanel compatibility
- Add seeders for testing business catalog
- Update admin dashboard with business filtering

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 /node_modules
 /public/hot
-/public/storage
+/public/images/business/*
+!/public/images/business/.gitkeep
+/public/images/products/*
+!/public/images/products/.gitkeep
+/public/payment-proofs/*
+!/public/payment-proofs/.gitkeep
 /storage/*.key
 /vendor
 .env
