chore: add payment_proofs directory to gitignore
The directory was missing from gitignore which could lead to unintended tracking of payment proof files.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /public/images/products/*
 !/public/images/products/.gitkeep
 /public/payment-proofs/*
+/public/payment_proofs/*
 !/public/payment-proofs/.gitkeep
 /storage/*.key
 /vendor
